objects/HealthCloudGA__AccountAccountRelation__c.object
<CustomObject>
    <description>A relationship between two accounts, such as between a household and a business account.</description>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RelatedFromAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InverseRelationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Uniquely identifies the relationship between Account__c and RelatedAccount__c so that it can be referenced by a trigger that creates the inverse relationship record.</description>
        <label>InverseRelationship</label>
        <referenceTo>HealthCloudGA__AccountAccountRelation__c</referenceTo>
        <relationshipLabel>Account Account Relations</relationshipLabel>
        <relationshipName>AccountAccountRelations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RelatedToAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Role</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HealthCloudGA__ReciprocalRole__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Account Role</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HealthCloudGA__ReciprocalRole__c</referenceTo>
        <relationshipName>AccountReciprocalRole</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Account-Account Relationship</label>
    <listViews>
        <fullName>HealthCloudGA__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Account Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Account Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>HealthCloudGA__CannotCreateInactiveRecord</fullName>
        <active>true</active>
        <description>Ensures that a record cannot be created as Inactive</description>
        <errorConditionFormula>AND(ISNEW(),HealthCloudGA__Active__c == false)</errorConditionFormula>
        <errorMessage>A Account-Account Relationship cannot be created as Inactive.</errorMessage>
    </validationRules>
</CustomObject>